--- a/index/question1.html
+++ b/index/question1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>마블 성격 유형 테스트</title>
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../css/question.css" />
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
   <meta charset="UTF-8" />
   <!-- jQuery 이용 -->
@@ -16,9 +16,7 @@
   <!-- boostrap 기능 이용위한 link 및 script 연결 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="../css/question.css">
 </head>
 
@@ -26,21 +24,21 @@
   <header id="header"></header>
 
   <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
   </div>
-  <div id="wrap">
 
+  <div id="wrap">
     <!-- * 질문 -->
     <div class="question">
       <p>갑자기 약속이 취소됐다...</p>
 
       <p>이 때 나의 기분은?</p>
     </div>
-    <div class="answer_container">
-      <button class="btn_ans answer1" id="I">
+    <div class="answer">
+      <button class="answer1" id="I">
         아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
       </button>
-      <button class="btn_ans answer2" id="E">
+      <button class="answer2" id="E">
         진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
       </button>
     </div>
