--- a/index/question10.html
+++ b/index/question10.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/question.css" />
-    <link
-      rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <!-- header & footer 고정 -->
-    <script src="../js/static.js"></script>
-    <title>10</title>
-  </head>
 
-  <body>
-    <header id="header"></header>
-    <div class="progress">
-      <div
-        class="progress-bar progress-bar-striped progress-bar-animated"
-        id="bar"
-        role="progressbar"
-      ></div>
+<head>
+  <link rel="stylesheet" href="/css/question.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <title>마블 유형 성격 테스트</title>
+</head>
+
+<body>
+  <header id="header"></header>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
+  </div>
+  <div id="wrap">
+    <div class="question">
+      <p>나는 요리할 때</p>
     </div>
-    <div id="wrap">
-      <div class="question">
-        <p>나는 요리할 때</p>
-      </div>
-      <div class="answer">
-        <button class="answer1" id="N">
-          요리는 손맛이지~ 계량 대충대충 하며 내 감을 믿는다.
-        </button>
-        <button class="answer2" id="S">
-          고추장 100g(저울 사용), 물 500ml(계량컵 사용) 기계가 요리하듯 모든
-          양을 정확하게 잰다.
-        </button>
-      </div>
+    <div class="answer">
+      <button class="answer1" id="N">
+        요리는 손맛이지~ 계량 대충대충 하며 내 감을 믿는다.
+      </button>
+      <button class="answer2" id="S">
+        고추장 100g(저울 사용), 물 500ml(계량컵 사용) 기계가 요리하듯 모든
+        양을 정확하게 잰다.
+      </button>
     </div>
+  </div>
 
-    <footer>footer 자리</footer>
-    <script>
-      // 진행 바 변경
-      let num = $("title").text();
-      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
+  <footer></footer>
+  <script>
+    // 진행 바 변경
+    let num = $("title").text();
+    $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
-      // 로컬스토리지 저장
-      $("button").click(function () {
-        my_key = $(this).attr("id");
-        console.log(my_key);
-        localStorage.setItem("answer10", my_key);
-        $(location).attr("href", "question11.html");
-      });
-    </script>
-  </body>
+    // 로컬스토리지 저장
+    $("button").click(function () {
+      my_key = $(this).attr("id");
+      console.log(my_key);
+      localStorage.setItem("answer10", my_key);
+      $(location).attr("href", "question11.html");
+    });
+  </script>
+</body>
+
 </html>
