--- a/index/question13.html
+++ b/index/question13.html
@@ -1,55 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/question.css" />
-    <link
-      rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <!-- header & footer 고정 -->
-    <script src="../js/static.js"></script>
-    <title>13</title>
-  </head>
 
-  <body>
-    <header id="header"></header>
-    <div class="progress">
-      <div
-        class="progress-bar progress-bar-striped progress-bar-animated"
-        id="bar"
-        role="progressbar"
-      ></div>
+<head>
+  <link rel="stylesheet" href="/css/question.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <title>13</title>
+</head>
+
+<body>
+  <header id="header"></header>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
+  </div>
+  <div id="wrap">
+    <div class="question">
+      <p>고민상담을 해줄 때 나는...</p>
     </div>
-    <div id="wrap">
-      <div class="question">
-        <p>고민상담을 해줄 때 나는...</p>
-      </div>
-      <div class="answer">
-        <button class="answer1" id="T">최대한 해결해 주려고 한다.</button>
-        <button class="answer2" id="F">최대한 들어주려고 한다.</button>
-      </div>
+    <div class="answer">
+      <button class="answer1" id="T">최대한 해결해 주려고 한다.</button>
+      <button class="answer2" id="F">최대한 들어주려고 한다.</button>
     </div>
+  </div>
 
-    <footer>footer 자리</footer>
-    <script>
-      // 진행 바 변경
-      let num = $("title").text();
-      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
+  <footer></footer>
+  <script>
+    // 진행 바 변경
+    let num = $("title").text();
+    $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
-      // 로컬스토리지 저장
-      $("button").click(function () {
-        my_key = $(this).attr("id");
-        console.log(my_key);
-        localStorage.setItem("answer13", my_key);
-        $(location).attr("href", "question14.html");
-      });
-    </script>
-  </body>
+    // 로컬스토리지 저장
+    $("button").click(function () {
+      my_key = $(this).attr("id");
+      console.log(my_key);
+      localStorage.setItem("answer13", my_key);
+      $(location).attr("href", "question14.html");
+    });
+  </script>
+</body>
+
 </html>
