--- a/index/question2.html
+++ b/index/question2.html
@@ -5,19 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>마블 성격 유형 테스트</title>
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../css/question.css" />
   <!-- jQuery 이용 -->
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
   <!-- header & footer 고정 -->
   <script src="../js/static.js"></script>
   <!-- boostrap 기능 이용위한 link 및 script 연결 -->
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/question.css">
 </head>
 
@@ -34,11 +30,11 @@
     <div class="question">
       <p>나는 사람들을 만날 때</p>
     </div>
-    <div class="answer_container">
-      <button class="btn_ans answer1" id="I">
+    <div class="answer">
+      <button class="answer1" id="I">
         사람이 너무 많으면 부담스러워.. 일대일이나 소수끼리 만나는 것이 좋다!
       </button>
-      <button class="btn_ans answer2" id="E">
+      <button class="answer2" id="E">
         사람은 많을수록 재미있지! 다수로 만나는 것이 좋다!
       </button>
     </div>
