--- a/index/question5.html
+++ b/index/question5.html
@@ -1,59 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/question.css" />
-    <link
-      rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <!-- header & footer 고정 -->
-    <script src="../js/static.js"></script>
-    <title>5</title>
-  </head>
 
-  <body>
-    <header id="header"></header>
-    <div class="progress">
-      <div
-        class="progress-bar progress-bar-striped progress-bar-animated"
-        id="bar"
-        role="progressbar"
-      ></div>
+<head>
+  <link rel="stylesheet" href="/css/question.css" />
+  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <title>마블 성격 유형 테스트</title>
+</head>
+
+<body>
+  <header id="header"></header>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
+  </div>
+  <div id="wrap">
+    <div class="question">
+      <p>사람들과 대화할 때 나는</p>
     </div>
-    <div id="wrap">
-      <div class="question">
-        <p>사람들과 대화할 때 나는</p>
-      </div>
-      <div class="answer">
-        <button class="answer1" id="I">
-          말 실수하면 안돼.. 차분하고 신중하게 말을 선택한다.
-        </button>
-        <button class="answer2" id="E">
-          말하는 것이 너무 즐거워! 적극적으로 참여하며 활발하게 말한다.
-        </button>
-      </div>
+    <div class="answer">
+      <button class="answer1" id="I">
+        말 실수하면 안돼.. 차분하고 신중하게 말을 선택한다.
+      </button>
+      <button class="answer2" id="E">
+        말하는 것이 너무 즐거워! 적극적으로 참여하며 활발하게 말한다.
+      </button>
     </div>
+  </div>
 
-    <footer>footer 자리</footer>
-    <script>
-      // 진행 바 변경
-      let num = $("title").text();
-      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
+  <footer></footer>
+  <script>
+    // 진행 바 변경
+    let num = $("title").text();
+    $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
-      // 로컬스토리지 저장
-      $("button").click(function () {
-        my_key = $(this).attr("id");
-        console.log(my_key);
-        localStorage.setItem("answer5", my_key);
-        $(location).attr("href", "question6.html");
-      });
-    </script>
-  </body>
+    // 로컬스토리지 저장
+    $("button").click(function () {
+      my_key = $(this).attr("id");
+      console.log(my_key);
+      localStorage.setItem("answer5", my_key);
+      $(location).attr("href", "question6.html");
+    });
+  </script>
+</body>
+
 </html>
