--- a/etc/test2.html
+++ b/etc/test2.html
@@ -24,6 +24,7 @@
         }
 
         .wrap {
+            display: inline-block;
             width: 100%;
             height: 100%;
             mix-blend-mode: overlay;
@@ -38,30 +39,33 @@
 </head>
 
 <body>
-    <script src="/js/index.js"></script>
-    <header id="header">
-        <h2 class="logo">MARVEL</h2>
-        <div class="menu">
-            <li><a href="../index/index.html">HOME</a></li>
-            <li><a href="#">LOG IN</a></li>
-            <li><a href="#">SIGN UP</a></li>
+    <section>
+        <script src="/js/index.js"></script>
+        <header id="header">
+            <h2 class="logo">MARVEL</h2>
+            <div class="menu">
+                <li><a href="../index/index.html">HOME</a></li>
+                <li><a href="#">LOG IN</a></li>
+                <li><a href="#">SIGN UP</a></li>
+            </div>
+        </header>
+        <video src="../image/intro.mp4" autoplay loop></video>
+        <div id="wrap">
+            <div class="info" style="color:white">
+                <h1 class="test_name">마블 성격 유형 테스트</h1>
+                <p>
+                    설명 글입니다. ㅇㅁㅇㅁ;도ㅜ대ㅜㅁㄴㅊ;ㄷ누알
+                    ㅁㅇㅁㄷㅊㄷㅍㅁㅈㄷㅍㄷㅁㄹㄴ
+                    ㄴㄷㅎㄴㄷ
+                </p>
+                <button id="startBtn" class="btn btn-light" onclick="start()">
+                    시작하기
+                </button>
+            </div>
         </div>
-    </header>
-    <video src="../image/intro.mp4" autoplay loop></video>
-    <div id="wrap">
-        <div class="info" style="color:white">
-            <h1 class="test_name">마블 성격 유형 테스트</h1>
-            <p>
-                설명 글입니다. ㅇㅁㅇㅁ;도ㅜ대ㅜㅁㄴㅊ;ㄷ누알
-                ㅁㅇㅁㄷㅊㄷㅍㅁㅈㄷㅍㄷㅁㄹㄴ
-                ㄴㄷㅎㄴㄷ
-            </p>
-            <button id="startBtn" class="btn btn-light" onclick="start()">
-                시작하기
-            </button>
-        </div>
-    </div>
-    <footer id="footer"></footer>
+        <footer id="footer"></footer>
+
+    </section>
 
 </body>
 
