--- a/index/question9.html
+++ b/index/question9.html
@@ -1,70 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/question.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- bootstrap 이용 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <!-- jQuery 이용 -->
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <!-- header & footer 고정 -->
-    <script src="../js/static.js"></script>
-    <title>마블 성격 유형 테스트</title>
-  </head>
 
-  <body>
-    <header id="header"></header>
-    <div class="progress">
-      <div
-        class="progress-bar progress-bar-striped progress-bar-animated"
-        id="bar"
-        role="progressbar"
-      ></div>
+<head>
+  <link rel="stylesheet" href="/css/question.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- bootstrap 이용 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  <!-- jQuery 이용 -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <title>마블 성격 유형 테스트</title>
+</head>
+
+<body>
+  <header id="header"></header>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
+  </div>
+  <div id="wrap">
+    <div class="question">
+      <img src="/image/question9_img.jpg" class="question_img" alt="" />
+      <p>비행기를 탔는데 갑자기 비행기가 흔들린다!</p>
+      <p>이때 당신의 기분은?</p>
     </div>
-    <div id="wrap">
-      <div class="question">
-        <img src="/image/question9_img.jpg" class="question_img" alt="" />
-        <p>비행기를 탔는데 갑자기 비행기가 흔들린다!</p>
-        <p>이 때 당신의 기분은?</p>
-      </div>
-      <div class="answer">
-        <button class="answer1" id="N">
-          추락하면 어떡하지..? 구명조끼가 어디있더라? 아까 승무원분께서 어떻게
-          하라고 하셨지? 근데 지금 바다가 아니라 땅위인데 어떡하지?
-        </button>
-        <button class="answer2" id="S">
-          아 비행기가 흔들리는구나. 에잉 음료수 엎었네.
-        </button>
-      </div>
+    <div class="answer">
+      <button class="answer1" id="N">
+        추락하면 어떡하지..? 구명조끼가 어디있더라? 아까 승무원분께서 어떻게
+        하라고 하셨지? 근데 지금 바다가 아니라 땅위인데 어떡하지?
+      </button>
+      <button class="answer2" id="S">
+        아 비행기가 흔들리는구나. 에잉 음료수 엎었네.
+      </button>
     </div>
+  </div>
 
-    <footer></footer>
-    <script>
-      // 진행 바 변경
-      num = localStorage.getItem("pagenumber");
-      console.log(num);
-      localStorage.setItem("pagenumber", Number(num) + 1);
-      num = localStorage.getItem("pagenumber");
-      console.log(num);
-      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
+  <footer></footer>
+  <script>
+    // 진행 바 변경
+    num = localStorage.getItem("pagenumber");
+    console.log(num);
+    localStorage.setItem("pagenumber", Number(num) + 1);
+    num = localStorage.getItem("pagenumber");
+    console.log(num);
+    $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
-      // 로컬스토리지 저장
-      $("button").click(function () {
-        my_key = $(this).attr("id");
-        console.log(my_key);
-        localStorage.setItem("answer9", my_key);
-        $(location).attr("href", "question10.html");
-      });
-    </script>
-  </body>
+    // 로컬스토리지 저장
+    $("button").click(function () {
+      my_key = $(this).attr("id");
+      console.log(my_key);
+      localStorage.setItem("answer9", my_key);
+      $(location).attr("href", "question10.html");
+    });
+  </script>
+</body>
+
 </html>
